# valkey-ci-bot

./: .env.example  .gitignore  AGENTS.md  README.md  agent-events.jsonl  failure-store.json  monitor-state.json  mypy.ini  new_content.txt  pyproject.toml  rate-state.json  requirements-dev.txt  requirements.txt  review-state.json  setup.py
.github/: ci-failure-bot.yml  pr-review-bot.yml  valkey-daily-bot.yml  valkey-fuzzer-bot.yml
dashboard-app/: README.md  acceptance.html  ai.html  daily.html  flaky.html  fuzzer.html  index.html  ops.html  review.html
docs/: ai-pipeline-operations.md  architecture.md  dashboard-schema.md  dashboard-user-guide.md  valkey-acceptance.md
examples/: backport-caller-workflow.yml  backport-config.yml  caller-workflow.yml  ci-agent-acceptance.yml  config.yml  pr-review-caller-workflow.yml  pr-review-config.yml  valkey-acceptance.yml
scripts/: __init__.py  agent_dashboard.py  agent_dashboard_site.py  alerting.py  backfill_daily_health_history.py  backport_config.py  backport_main.py  backport_models.py  backport_pr_creator.py  backport_utils.py  bedrock_agent_client.py  bedrock_client.py  bedrock_kb_refresh.py  bedrock_retriever.py  build_valkey_acceptance_manifest.py  cherry_pick.py  ci_validator.py  code_reviewer.py  comment_publisher.py  commit_signoff.py  config.py  conflict_resolver.py  correlation_engine.py  daily_health_data.py  daily_health_history.py  daily_health_report.py  demo_bundle.py  event_ledger.py  exceptions.py  failure_detector.py  failure_store.py  fix_generator.py  fix_loop.py  fuzzer_issue_publisher.py  fuzzer_run_analyzer.py  fuzzer_trends.py  generate_fixtures.py  generate_redirects.py  github_client.py  html_helpers.py  (+38 more)
tests/: conftest.py  test_agent_dashboard.py  test_agent_dashboard_site.py  test_agent_dashboard_workflow.py  test_ai_eval_report.py  test_ai_eval_scoring.py  test_ai_fallback_parser.py  test_ai_prompt_safety.py  test_backfill_daily_health_history.py  test_backport_config.py  test_backport_conflict_resolver.py  test_backport_main.py  test_backport_pr_creator.py  test_backport_utils.py  test_backport_workflow.py  test_bedrock_agent_client.py  test_bedrock_client.py  test_bedrock_kb_refresh.py  test_bedrock_retriever.py  test_build_config_mapping.py  test_comment_publisher.py  test_commit_signoff.py  test_config.py  test_daily_health_history.py  test_daily_pr_rate_limit.py  test_dashboard_schema.py  test_deduplication.py  test_demo_bundle.py  test_event_ledger.py  test_failure_report.py  test_failure_store.py  test_failure_store_compact.py  test_fingerprint.py  (+61 more)
(+107 files in other folders)
