[project]
name = "valkey-ci-agent"
version = "0.1.0"
description = "CI automation agent for the Valkey project"
requires-python = ">=3.9"
license = "BSD-3-Clause"
dependencies = [
    "boto3>=1.28.0",
    "PyGithub>=2.1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.82.0",
    "mypy>=1.5.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
